# mosslang

./: .gitignore  Cargo.toml  DESIGN_NOTES.md  DESIGN_NOTES.txt  QUIRKS.md  README.md  REFERENCE.md  TEST.cmd  TEST_acess2_img2sif.cmd  TEST_hello.cmd
example_code/: acess2_GenerateInitrd.ms  acess2_img2sif.ms  hello_world.ms  libc.ms
src/: ast.rs  expand.rs  helpers.rs  load_crates.rs  main.rs  metadata.rs  parser.rs  resolve.rs  typecheck.rs
src/ast/: expr.rs  items.rs  path.rs  pattern.rs  ty.rs
src/codegen/: backend_cranelift.rs  const_eval.rs  ir.rs  mod.rs  type_info.rs
src/codegen/ir/: dump.rs  from_expr.rs  ssa_ify.rs  verify.rs  visit.rs
src/helpers/: iterable_trie.rs
src/parser/: attrs.rs  expr.rs  items.rs  lex-new.rs  lex-pm2.rs  lex.rs  path.rs  pattern.rs  ty.rs
src/typecheck/: commit.rs  enumerate.rs  ivars.rs  run.rs
