[package]
name = "minirust"
version = "0.1.0"
authors = ["John Hodge <tpg@mutabah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "cranelift",
    ]
cranelift = [ "dep:cranelift-frontend", "dep:cranelift-codegen", "dep:cranelift-module", "dep:cranelift-object" ]

[profile.dev]
opt-level = 1

[dependencies]
# Log macros
#log = "0.4"
# Log backend
#env_logger = "0.5"

# Argument parsing
gumdrop = "0.8.1"
# Literal parsing
litrs = "0.4.0"
# `proc_macro` but usable outside of proc macros
proc-macro2 = "1.0.56"
string-interner = "0.19.0"
# Enum to string
strum = { version = "0.24.1", features = [ "std", "derive" ] }
utf8reader = "0.1.0"


# Cranelift codegen backend
cranelift-frontend = { version = "0.118", optional = true }
cranelift-codegen  = { version = "0.118", optional = true }
cranelift-module   = { version = "0.118", optional = true }
cranelift-object   = { version = "0.118", optional = true }
# target-lexicon = "0.11"